# LC-weather-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  INITIAL.md  Makefile  README.md  VSCODE_SETUP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  redis.conf  requirements.txt  streamlit_app.py  weather_agent_demo.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
LIPs/: weather_agent_implementation.md
agents/: __init__.py  weather_agent.py
api/: __init__.py  main.py
chains/: __init__.py  agent_chains.py  base_chain.py
docs/: AGENT_DEVELOPMENT_GUIDE.md
examples/: streaming_chain.py
scripts/: deploy.sh
tests/: test_weather_agent.py  test_weather_formatter.py  test_weather_tools.py
tools/: __init__.py  base_tool.py  weather_tools.py
utils/: __init__.py  config.py  resilience.py  weather_formatter.py
